# deplio

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .vercelignore  Makefile  README.md  go.work  go.work.sum  local-secrets.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.cjs  turbo.json
backend/api/: .dockerignore  Dockerfile  Procfile  doppler.yaml  fly.dev.toml  fly.prod.toml  generate_schemas.py  package.json  pyproject.toml
backend/api/deplio/: app.py  config.py  context.py  routers.py  tags.py
backend/api/deplio/auth/: dependencies.py
backend/api/deplio/command/: __init__.py  command.py  command_controller.py
backend/api/deplio/command/supabase/: __init__.py  error.py  execute.py  insert.py
backend/api/deplio/middleware/: default_content_type.py  default_version.py
backend/api/deplio/models/data/head/: _base.py  enums.py
backend/api/deplio/models/data/head/db/: _base.py  api_key.py  cron.py  enums.py  jobs.py  q.py  team.py  user_and_team.py
backend/api/deplio/models/data/latest/: enums.py  responses.py  team.py  user.py
backend/api/deplio/models/data/v2024_02_26/: __init__.py  _base.py  enums.py  responses.py
backend/api/deplio/models/versions/: __init__.py
backend/api/deplio/modules/: cron.py
backend/api/deplio/routes/: cron.py  jobs.py  q.py  version.py
backend/api/deplio/scheduler/: cron.py  package.json  worker.py
backend/api/deplio/services/: db.py  redis.py  sqs.py  supabase.py
backend/api/deplio/types/: enums.py  q.py
backend/api/deplio/utils/: async_utils.py  q.py  supabase.py
frontend/: .eslintrc.cjs  (+6 more)
(+244 files in other folders)
